# trailblazer

./: .bumpversion.cfg  .dockerignore  .editorconfig  .gitignore  .gitlint.yaml  .pre-commit-config.yaml  .travis.yml  CODEOWNERS  DEPLOYMENT.md  Dockerfile  Dockerfile-CLI  Dockerfile-cli  Dockerfile.cli  LICENSE  MANIFEST.in  README.md  docker-compose.yml  gunicorn_config.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  traiblazer.db  trailblazer-pod.yaml  trailblazer.db
.configs/: alembic-stage.ini
.ebextensions/: trailblazer.config
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE
.github/workflows/: black.yml  build_cli_image.yml  build_dockerfile_on_push.yml  build_dockerfile_on_release.yml  bumpversion_on_merge_master.yml  linting.yml  production_install.yml  production_install_clinical-db.yml  production_install_hasta.yml  publish_to_pypi.yaml  scan_image.yaml  test_and_coverage.yml
alembic/: env.py
alembic/versions/: 0829dd9c54d7_add_priority_field_to_pick_up_qos_.py  2023_11_07_7e370bc3f587_fix_status_spelling.py  2023_12_15_cf46b09703ce_rename_family_to_case_id.py  2023_12_28_6c3da78d1af0_drop_is_deleted.py  2024_01_19_bebe0db0c8de_rename_sars_cov_2_to_mutant.py  2024_01_25_486e8c875e0b_add_upload_jobs.py  2024_01_25_7a614c201092_add_job_type.py  2024_01_26_dc1aadf08b4d_drop_avatar.py  2024_01_29_2455fd7f51c4_rename_sars_cov_2_to_mutant_2.py  2024_02_02_4b925b29ac45_add_order_to_analysis.py  2024_02_09_e907e651fb9e_rename_data_analysis_to_workflow.py  2024_03_08_febdb4e78bb5_add_refresh_token_column.py  2024_03_12_a8ae3ab67bc8_add_delivery_table.py  2024_03_21_a6a826d2cdc4_make_delivery_fields_nullable.py  2024_06_27_62d2c4418b52_add_user_abbreviations.py  2024_07_23_8184202b1654_add_abbreviation.py  2024_07_24_e0f217219a92_make_abbreviation_non_nullable.py  2024_08_26_2e86e302d6f7_add_tower_id_to_analysis.py  2025_09_12_6f7cdb89320f_add_missing_indices_to_job.py  2026_06_24_f943917ee854_add_hold_delivery_functionality.py  2029c2789209_add_logged_at_date_to_sort_recent_.py  3140747f399a_remove_step_from_unique_contraint.py  4f4098ada28f_add_user_management.py  61df280b0af6_add_is_visible_and_new_status_option.py  65a2be59adb1_add_another_status_option_for_human_.py  70b9d03a7e7f_add_express_qos.py  79f5f7602ba5_add_metadata_table.py  7d62ca2376df_add_data_analysis_field.py  84079287ee2f_initial_revision.py  85f409b2eeeb_add_ticket_number.py  8786470f3a1b_add_new_status_option_canceled.py  8a693bb99de3_add_qc_as_status.py  92599c4afa62_add_failed_step_to_unique_contraint_.py  a820403d11af_add_step_table_store_all_error_steps.py  ae1c26559e9b_tower_support.py  afffbd40f0c3_add_another_option_for_status_field.py  b0c0ce27e4bd_add_is_archived_to_user_table.py  b26bb11641b4_actually_add_user_management.py  d1183a4d6d27_add_wts_to_data_analysis.py  dd72c72e23a2_add_qos_maintenance.py  (+2 more)
analysis/: add.py  exc.py  init.py  scan.py  utils.py
analysis/cli/: __init__.py  base.py  core.py
analysis/server/: app.py
analysis/store/: __init__.py  api.py  cli.py  models.py  utils.py
nuxt/: .eslintrc.js  README.md  now.json  nuxt.config.js  package.json  server.js
nuxt/components/: CommentBox.vue  (+3 more)
scripts/: fabfile.py  run-scripts.sh
tests/: conftest.py  test_log.py  test_models.py  test_scan.py  test_utils.py  typed_mock.py
trailblazer/: __init__.py  add.py  constants.py  containers.py  environ.py  exc.py  exceptions.py  init.py  log.py  models.py  scan.py  utils.py
(+344 files in other folders)
