[tool.poetry]
name = "trailblazer"
version = "21.5.47"
description = "Keep track of and manage analyses"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
"ruamel.yaml" = "^0.18.6"
Flask = "^3.0.3"
Flask-Cors = "^5.0.0"
MarkupSafe = "^2.1.5"
PyMySQL = "^1.1.1"
SQLAlchemy = "^2.0.34"
alembic = "^1.13.2"
click = "^8.1.7"
coloredlogs = "^15.0.1"
cryptography = "^43.0.1"
flask-reverse-proxy = "^0.2.0.2"
google-auth = "^2.34.0"
gunicorn = "^23.0.0"
marshmallow = "^3.22.0"
pydantic = "^2.9.1"
python = "^3.11"
requests = "^2.32.3"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
coveralls =  "^3"
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-cov = "*"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py37"
exclude = ["alembic"]
ignore = ["E501"]

