[tool.poetry]
name = "trailblazer"
version = "21.6.0"
description = "Keep track of and manage analyses"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
include = [
  "README.md",
  "trailblazer/**/*",
  "tests/**/*"
]


[tool.poetry.dependencies]
"ruamel.yaml" = "*"
dependency-injector = "*"
Flask = "*"
Flask-Cors = "*"
MarkupSafe = "*"
PyMySQL = "*"
SQLAlchemy = "*"
alembic = "*"
click = "*"
coloredlogs = "*"
cryptography = "*"
flask-reverse-proxy = "*"
google-auth = "*"
gunicorn = "*"
marshmallow = "*"
pydantic = "*"
python = "^3.11"
requests = "*"
setuptools  = "*"
tabulate = "*"

[tool.poetry.group.dev.dependencies]
coveralls =  "^3"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
requests-mock = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
trailblazer = "trailblazer.cli.core:base"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py37"
exclude = ["alembic"]
ignore = ["E501"]

